--- a/index.html
+++ b/index.html
@@ -2,5 +2,7 @@
 <html>
 <meta charset=utf-8/>
 <title>Permission Viewer</title>
+<!-- bootstrap - latest version of CSS -->
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
 <div id=app></div>
 <script src="bundle.js"></script>
